# incident-intelligence-agent

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yaml
config/: default.yaml  eval.yaml  production.yaml.example
data/: deploys.json  flags.json  history.json  incidents.json
data/metrics/: checkout-api.csv  payments-api.csv
evals/: RESULTS.md  eval2_storm_clustering.py  make_eval_dataset.py
evals/results/: fix_13362677.md  fix_13374158.md  fix_13558084.md  fix_13598479.md  incidents_after.json
sample_service/com/shop/checkout/: GiftMessageMapper.java
scripts/: servicenow_business_rule.js
src/triage_agent/: __main__.py  clustering.py  config.py  llm.py  pipeline.py  scrubber.py  taxonomy.py  webhook_server.py
src/triage_agent/adapters/: base.py  file_adapters.py  gcp.py  github_fix.py  servicenow.py
tests/: test_adapters_and_webhook.py  test_clustering.py  test_config_and_llm.py  test_pipeline_integration.py  test_reference_luhn.py  test_scrubber.py  test_taxonomy.py
