[project]
name = "triage-agent"
version = "1.0.0"
description = "AI incident triage agent: evidence-grounded root-cause classification with hard safety gates"
requires-python = ">=3.10"
dependencies = ["requests>=2.31", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyflakes>=3.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
